fix click to expand being a little visible in Safari/iOS

--- a/src/sass/themes/oc2.scss
+++ b/src/sass/themes/oc2.scss
@@ -1127,6 +1127,7 @@
       .click-to-expand-text-wrapper {
         mask-image: none;
         max-height: 0;
+        height: 0;
       }
     }
 
